IG-1708 [Nuclio] Implement "Build command" field in 'Build' sub-tab (refactor)

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
@@ -19,13 +19,13 @@
 </div>
 
 <div class="buttons">
-    <div class="secondary-button"
+    <div class="ncl-secondary-button"
          tabindex="0"
          data-ng-click="$ctrl.onClose()"
          data-ng-keydown="$ctrl.onClose($event)">
         Cancel
     </div>
-    <div class="primary-button"
+    <div class="ncl-primary-button"
          tabindex="0"
          ngf-select="$ctrl.uploadFile($file)">
         Browse
