IG-1713 [Nuclio] Expand/Collapse header doesn't work on Projects.

--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -1,3 +1,4 @@
+<section class="igz-general-content" data-igz-extend-background>
 <!--splash screen-->
 <igz-splash-screen data-is-splash-showed="$ctrl.isSplashShowed"></igz-splash-screen>
 
@@ -118,4 +119,4 @@
                       data-search-states="$ctrl.searchStates">
     </igz-search-input>
 </igz-info-page-filters>
-
+</section>
