--- a/src/nuclio/projects/project/functions/function/ncl-function.tpl.html
+++ b/src/nuclio/projects/project/functions/function/ncl-function.tpl.html
@@ -1,1 +1,1 @@
-<section class="igz-general-content" data-igz-extend-background data-ui-view="function"></section>
+<section data-igz-extend-background data-ui-view="function"></section>
