--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -6,11 +6,25 @@
             <div class="type-header">Type</div>
             <div class="value-header use-type">Info</div>
         </div>
-        <div class="igz-scrollable-container"
+        <div data-ng-if="!$ctrl.isScrollNeeded()"
+             class="igz-scrollable-container">
+            <div class="table-body" data-ng-repeat="variable in $ctrl.variables">
+                <ncl-key-value-input class="new-label-input"
+                                     data-list-class="ncl-version-configuration-environment-variables"
+                                     data-row-data="variable"
+                                     data-item-index="$index"
+                                     data-use-type="true"
+                                     data-action-handler-callback="$ctrl.handleAction(actionType, index)"
+                                     data-change-data-callback="$ctrl.onChangeData(newData, index)"></ncl-key-value-input>
+            </div>
+        </div>
+        <div data-ng-if="$ctrl.isScrollNeeded()"
+             class="igz-scrollable-container scrollable-environment-variables"
              data-ng-scrollbars
              data-ng-scrollbars-config="$ctrl.scrollConfig">
             <div class="table-body" data-ng-repeat="variable in $ctrl.variables">
                 <ncl-key-value-input class="new-label-input"
+                                     data-list-class="scrollable-environment-variables"
                                      data-row-data="variable"
                                      data-item-index="$index"
                                      data-use-type="true"
