--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -8,16 +8,12 @@
         <div class="igz-row">
             <div class="igz-col-100 build-field">
                 <div class="field-label">Build base image</div>
-                <igz-validating-input-field data-field-type="input"
-                                            data-input-name="baseImageName"
-                                            data-input-value="$ctrl.version.build.baseImageName"
-                                            data-is-focused="false"
-                                            data-form-object="$ctrl.buildForm"
-                                            data-validation-is-required="true"
-                                            data-placeholder-text="Type ..."
-                                            data-update-data-callback="$ctrl.inputValueCallback(newData)"
-                                            data-update-data-field="baseImageName">
-                </igz-validating-input-field>
+                <igz-default-dropdown data-is-required="true"
+                                      data-values-array="$ctrl.datasetTypesList"
+                                      data-item-select-callback="$ctrl.onBaseImageChange(item)"
+                                      data-placeholder="Select ..."
+                                      data-form-object="$ctrl.buildForm"
+                                      data-input-name="baseImageName"></igz-default-dropdown>
             </div>
             <div class="igz-col-100 build-field">
                 <div class="field-label">Build command</div>
