IG-1740 [nuclio] Rename "Build command" to "Build commands"

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -20,7 +20,7 @@
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-100 build-field">
-                <div class="field-label">Build command</div>
+                <div class="field-label">Build commands</div>
                 <igz-validating-input-field data-field-type="textarea"
                                             data-input-name="Commands"
                                             data-input-value="$ctrl.version.build.Commands"
