--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -16,7 +16,7 @@
                                       data-input-name="baseImageName"></igz-default-dropdown>
             </div>
             <div class="igz-col-100 build-field">
-                <div class="field-label">Build command</div>
+                <div class="field-label">Build commands</div>
                 <igz-validating-input-field data-field-type="textarea"
                                             data-input-name="Commands"
                                             data-input-value="$ctrl.version.build.Commands"
