--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
@@ -2,16 +2,11 @@
     <div class="title">Runtime Attributes</div>
     <form name="$ctrl.runtimeAttributesForm" class="runtime-attributes-wrapper">
         <div class="row">
-            <div class="runtime-dropdown">
+            <div class="runtime-title">
                 <span class="label">Runtime</span>
-                <igz-default-dropdown data-select-property-only="id"
-                                      data-values-array="$ctrl.runtimes"
-                                      data-selected-item="$ctrl.data.runtime"
-                                      data-item-select-callback="$ctrl.onDropdownDataChange(item, isItemChanged, field)"
-                                      data-item-select-field="runtime"
-                                      data-form-object="$ctrl.runtimeAttributesForm"
-                                      data-input-name="runtime"
-                                      data-placeholder="Select type"></igz-default-dropdown>
+                <div class="runtime">
+                    {{$ctrl.version.spec.runtime}}
+                </div>
             </div>
             <div class="arguments-input">
                 <span class="label">Arguments</span>
