--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -38,6 +38,7 @@
                         data-version="$ctrl.version"></ncl-version-configuration-logging>
                 <ncl-version-configuration-runtime-attributes
                         class="configuration-block runtime-attributes"
+                        data-ng-class="{'unvisible-block': $ctrl.version.spec.runtime === 'shell'}"
                         data-version="$ctrl.version"></ncl-version-configuration-runtime-attributes>
             </div>
         </div>
