IG-1749 [Nuclio] Please make demo mechanism in Nuclio project
IG-1749 [Nuclio] Please make demo mechanism in Nuclio project

--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -38,7 +38,7 @@
                         data-version="$ctrl.version"></ncl-version-configuration-logging>
                 <ncl-version-configuration-runtime-attributes
                         class="configuration-block runtime-attributes"
-                        data-ng-class="{'unvisible-block': $ctrl.version.spec.runtime === 'shell'}"
+                        data-ng-class="{'invisible-block': $ctrl.version.spec.runtime === 'shell'}"
                         data-version="$ctrl.version"></ncl-version-configuration-runtime-attributes>
             </div>
         </div>
