IG-1749 [nuclio] Add demo mechanism to nuclio (#19)

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -4,7 +4,7 @@
         <div class="row">
             <!-- TODO -->
             <div class="sliders-block"
-                 data-ng-if="false">
+                 data-ng-if="$ctrl.isDemoMode()">
                 <div class="slider-row">
                     <igz-slider-input-block data-slider-config="$ctrl.memorySliderConfig"
                                             data-measure-units="$ctrl.defaultMeasureUnits"
