Fixed configuration, trigger tabs

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -32,8 +32,8 @@
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"></ncl-key-value-input>
             </div>
         </div>
-        <div class="create-label-button"
-             data-ng-click="$ctrl.addNewVariable()">
+        <div class="create-variable-button"
+             data-ng-click="$ctrl.addNewVariable($event)">
             <span class="igz-icon-add-round"></span>
             Create a new environment variable
         </div>
