--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="create-label-button"
-             data-ng-click="$ctrl.addNewLabel()">
+             data-ng-click="$ctrl.addNewLabel($event)">
             <span class="igz-icon-add-round"></span>
             Create a new label
         </div>
