--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
@@ -30,8 +30,8 @@
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"></ncl-key-value-input>
             </div>
         </div>
-        <div class="create-label-button"
-             data-ng-click="$ctrl.addNewAnnotation()">
+        <div class="create-annotation-button"
+             data-ng-click="$ctrl.addNewAnnotation($event)">
             <span class="igz-icon-add-round"></span>
             Create a new annotation
         </div>
