--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="logger-dropdown">
                     <span class="label">Logger lever</span>
-                    <igz-default-dropdown data-selected-item="$ctrl.version.spec.loggerSinks.level"
+                    <igz-default-dropdown data-selected-item="$ctrl.version.spec.loggerSinks[0].level"
                                           data-select-property-only="type"
                                           data-dropdown-type="severity"
                                           data-item-select-callback="$ctrl.setPriority(item)"
@@ -16,9 +16,9 @@
                     <span class="label">Logger destination</span>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="arguments"
-                                                data-input-value="$ctrl.version.spec.loggerSinks.sink"
+                                                data-input-value="$ctrl.version.spec.loggerSinks[0].sink"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                                data-update-data-field="spec.loggerSinks.sink"
+                                                data-update-data-field="spec.loggerSinks[0].sink"
                                                 data-form-object="$ctrl.loggingForm"
                                                 data-placeholder-text="Type a destination..."></igz-validating-input-field>
                 </div>
