--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -1,4 +1,5 @@
 <div class="ncl-edit-version">
+    <igz-splash-screen data-is-splash-showed="$ctrl.isSplashShowed"></igz-splash-screen>
 
     <!--actions bar-->
     <igz-info-page-actions-bar class="igz-component border-top">
